Fixed server banner top bar. Should make the whole banner visible now.

--- a/base16.css
+++ b/base16.css
@@ -415,7 +415,7 @@ div.folderIconWrapper__48112 {
         background: var(--base00) !important;
     }
     .header_f37cb1 {
-        background-color: var(--base01) !important;
+        /* background-color: var(--base01) !important; */
     }
     .wrapper_ef3116 {
         background-color: var(--base00) !important;
